--- a/src/app/components/shared/selectors/date-range/date-range.component.scss
+++ b/src/app/components/shared/selectors/date-range/date-range.component.scss
@@ -5,5 +5,5 @@
 }
 
 .date-input-field {
-  width: 48%;
+  width: 49%;
 }
